# python-project-lvl2

./: .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  pytestcov.yaml  pytests.yaml
gendiff/: __init__.py  create_AST.py  create_diff_tree.py  generate_diff.py  parsers.py
gendiff/formaters/: plain.py  render.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff_package/: create_AST.py  engine.py  generate_diff.py  parser.py
gendiff_package/formaters/: plain.py  render.py  stylish.py
gendiff_package/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: result.txt  result_json.txt
